<resources>
    <string name="app_name">MusicWiki</string>
    <string name="music_wiki">musicwiki</string>
    <string name="welcome">Welcome!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="check_internet_connection">Please check internet connection and try again later!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="ok">OK</string>
    <string name="choose_genre">Choose a genre to start with</string>
    <string name="retry">Retry</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="track">Track</string>
    <string name="playcount">Playcount</string>
    <string name="followers">Followers</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="top_album">Top Album</string>
    <string name="album_error">Album not found</string>
</resources>