<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mViewModel"
            type="com.shiv.musicwiki.feature.artistDetail.ArtistDetailViewModel" />

        <import type="android.view.View" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{mViewModel.artistInfoResponse==null?View.GONE:View.VISIBLE}">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImage"
            loadArtist="@{mViewModel.artistInfoResponse.artist.image.get(2).text}"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImageLayer"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:gravity="center"
            android:text="@{mViewModel.artistInfoResponse.artist.name}"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tvPlayCount"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{v->onClickListener.onClick(v)}"
            android:padding="@dimen/padding_8"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_16"
            android:layout_marginTop="?attr/actionBarSize"
            android:gravity="center"
            android:singleLine="true"
            android:text="@{mViewModel.artistInfoResponse.artist.stats.playcount}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Album Name" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_16"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:layout_marginBottom="@dimen/margin_vertical_large"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/playcount"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/ivImage"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayCount"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="@dimen/margin_horizontal_16"
            android:gravity="center"
            android:singleLine="true"
            android:text="@{mViewModel.artistInfoResponse.artist.stats.listeners}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Album Name" />

        <TextView
            android:id="@+id/tvFollowersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:layout_marginBottom="@dimen/margin_vertical_large"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/followers"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/ivImage"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
            app:layout_constraintStart_toStartOf="@id/tvFollowers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenre"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImage"
            tools:listitem="@layout/layout_horizontal_chip" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvGenre">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_8">

                <TextView
                    android:id="@+id/tvSummary"
                    htmlText="@{mViewModel.artistInfoResponse.artist.bio.summary}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_8"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Artist Name" />

                <TextView
                    android:id="@+id/tvTopTracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_8"
                    android:text="@string/top_tracks"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintTop_toBottomOf="@id/tvSummary" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTracks"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTopTracks"
                    app:spanCount="3"
                    tools:listitem="@layout/list_item_artist_top_album" />

                <TextView
                    android:id="@+id/tvTopAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_8"
                    android:text="@string/top_album"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintTop_toBottomOf="@id/rvTracks" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAlbum"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTopAlbum"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_item_artist_top_album" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>